# Sentiment-Analysis

./: README.md  pyproject.toml  requirements.txt  run.sh
.env/: pyvenv.cfg
analysis/: nltk_analysis.py  text_analysis.py  twitter_analysis.py
config/: settings.py
