[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "project to perform sentiment analysis on a sample data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
getoldtweets3 = "^0.0.11"
matplotlib = "^3.9.1"
nltk = "^3.8.1"
pyright = "^1.1.372"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
